# video_processor

./: CMakeLists.txt  README.md  requirements.txt
gui/: README.md  ai_sr_profiles.json  app.py  processor_worker.py
gui/logs/: app.log.1  app.log.5
models/: README.md  efrlfn_x2.onnx  efrlfn_x4.onnx  onnx_input_resolution_report.json  onnx_input_resolution_report.md  realesrgan_x2plus.onnx
python/: test_rtx_vsr.py
scripts/: export_realesrgan_to_onnx.py  profile_onnx_input_resolutions.py
src/: CMakeLists.txt  bindings.cpp  rtx_vsr_engine.cpp  rtx_vsr_engine.h
src/bindings/: module.cpp
src/core/: video_processor.cpp  video_processor.hpp
src/cuda/: kernels.cu  kernels.cuh
